--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h2>To-do list</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="add text">
-                <button onclick="addtask">Add button</button>
+                <button onClick="addtask()">Add button</button>
             </div>
             <ul id="list-container">
                 <!-- <li class="checked">Task 1</li>
